fixed env parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ script:
 - docker build -t test10:latest .
 - docker network create mynet
 - docker run --network mynet --name runner -d -p 127.0.0.1:3000:3000 test10:latest npm start 
-- docker run --network mynet --name tester test10:latest npm test 
+- docker run --network mynet -e FRONT_URL=$FRONT_URL --name tester test10:latest npm test 
